Улучшил страницы входа и регистрации, исправил баг с регистрацией

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <div class="col-md-12">
             <div class="card-body">
             <h5 class="card-title h3">Как это работает</h5>
-            <p class="card-text">Для клиента: для записи в салон вам следует перейти по данной <a href="#">ссылке</a>, выбрать салон, мастера и время, а также ввести своё имя, номер телефона и адрес электорнной почты. На почту вам придёт письмо со всей инфорацией.</p>
+            <p class="card-text">Для клиента: для записи в салон вам следует перейти по данной <a href="/register">ссылке</a>, выбрать салон, мастера и время, а также ввести своё имя, номер телефона и адрес электорнной почты. На почту вам придёт письмо со всей инфорацией.</p>
             <p class="card-text">Для администратора: вам следует зарегестрироваться как администратор, после вам нужно будет внести данные мастеров. Как только вы это сделаете ваши слиенты смогут записываться к вам, а у вас будет отображаться вся информация.</p>
             </div>
         </div>
