--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,10 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item mr-3">
-                <a class="nav-link active" href="/login">Вход</a>
+                <a class="nav-link active text-center" href="/login">Вход</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active border rounded" href="/register">Регистрация</a>
+                <a class="nav-link active border rounded text-center" href="/register">Регистрация</a>
               </li>
             </ul>
           </div>
