--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="card w-50 mx-auto mt-5 p-5 mb-5">    
+<<div class="card mx-auto p-5 my-5" style="min-width:500px; max-width:75%">
 <h1>Регистрация</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
