Поменял информацию на главной странице и сделал не большие заготовки для страницы профиля админа

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,10 @@
         <div class="col-md-12">
             <div class="card-body">
             <h5 class="card-title h3">О сайте</h5>
-            <p class="card-text">На данном сайте вы можете записаться в салоны красоты, парикмахерские и т.д.</p>
-            <p class="card-text">Если вы являетесь администратором, то выможете внести свой салон в базу и ваши улиенты смогут записываться к вам с данного сайта</p>
+            <p class="card-text">На нашем вы сможете создать корпоративный аккаунт для своего салона или парикмахерской
+                и с помощью него удобно вести онлайн запись клиентов на нужные им услуги, время и мастера. Доступ к онлайн
+                записи для клиентов будет представлен в виде преснальной ссылки, которую Вы сможете разместить в любых соц. сетях.</p>
+            <p class="card-text"></p>
             </div>
         </div>
         </div>
@@ -17,8 +19,8 @@
         <div class="col-md-12">
             <div class="card-body">
             <h5 class="card-title h3">Как это работает</h5>
-            <p class="card-text">Для клиента: для записи в салон вам следует перейти по данной <a href="/register">ссылке</a>, выбрать салон, мастера и время, а также ввести своё имя, номер телефона и адрес электорнной почты. На почту вам придёт письмо со всей инфорацией.</p>
-            <p class="card-text">Для администратора: вам следует зарегестрироваться как администратор, после вам нужно будет внести данные мастеров. Как только вы это сделаете ваши слиенты смогут записываться к вам, а у вас будет отображаться вся информация.</p>
+            <p class="card-text">Для клиента: для записи в салон Вам следует перейти по персональной ссылке нужного салона, выбрать мастера и время, а также ввести своё имя, номер телефона и адрес электорнной почты. На почту вам придёт письмо со всей инфорацией.</p>
+            <p class="card-text">Для администратора: Вам следует зарегестрироваться как администратор, после Вам нужно будет внести данные мастеров и предоставляемые Вашим салоном услуги. Как только вы это сделаете ваши слиенты смогут записываться к вам, а у Вас будет отображаться вся информация.</p>
             </div>
         </div>
         </div>
