--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,11 +2,15 @@
 
 {% block content %}
 <div>
+    <a href="/profile">Профиль</a>
+    <a href="/profile/masters">Мастера</a>
+    <a href="/profile/timeline">Таймлайн</a>
+    <a href="/profile/process">Услуги</a>
     <h2>{{ name }}</h2>
     логин - {{ login }}
     <br>номер телефона - {{ number }}
     <br>информация - {{ info }}
-    <br><a href="/change_profile">Редактировать профиль</a>
+    <br><a href="/profile/change_profile">Редактировать профиль</a>
     <br><a href="/logout">Выход</a>
 </div>
 {% endblock %}
