--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,225 +1,4 @@
-:root {
-    --numDays: 5;
-    --numHours: 24;
-    --timeHeight: 60px;
-    --calBgColor: #fff1f8;
-    --eventBorderColor: #f2d3d8;
-    --eventColor1: #ffd6d1;
-    --eventColor2: #fafaa3;
-    --eventColor3: #e2f8ff;
-    --eventColor4: #d1ffe6;
-}
-.calendar {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: auto 1fr;
-    margin: 2rem;
-}
-.timeline {
-    display: grid;
-    grid-template-rows: repeat(var(--numHours), var(--timeHeight));
-}
-.days {
-    display: grid;
-    grid-column: 2;
-    gap: 5px;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-}
-.events {
-    display: grid;
-    grid-template-rows: repeat(var(--numHours), var(--timeHeight));
-    border-radius: 5px;
-    background: var(--calBgColor);
-}
-
-.start-0 {
-    grid-row-start: 1;
-}
-.start-1 {
-    grid-row-start: 2;
-}
-.start-2 {
-    grid-row-start: 3;
-}
-.start-3 {
-    grid-row-start: 4;
-}
-.start-4 {
-    grid-row-start: 5;
-}
-.start-5 {
-    grid-row-start: 6;
-}
-.start-6 {
-    grid-row-start: 7;
-}
-.start-7 {
-    grid-row-start: 8;
-}
-.start-8 {
-    grid-row-start: 9;
-}
-.start-9 {
-    grid-row-start: 10;
-}
-
-.start-10 {
-    grid-row-start: 11;
-}
-
-.start-11 {
-    grid-row-start: 12;
-}
-.start-12 {
-    grid-row-start: 13;
-}
-.start-13 {
-    grid-row-start: 14;
-}
-.start-14 {
-    grid-row-start: 15;
-}
-.start-15 {
-    grid-row-start: 16;
-}
-.start-16 {
-    grid-row-start: 17;
-}
-.start-17 {
-    grid-row-start: 18;
-}
-.start-18 {
-    grid-row-start: 19;
-}
-.start-19 {
-    grid-row-start: 20;
-}
-.start-20 {
-    grid-row-start: 21;
-}
-.start-21 {
-    grid-row-start: 22;
-}
-.start-22 {
-    grid-row-start: 23;
-}
-.start-23 {
-    grid-row-start: 24;
-}
-
-.end-0 {
-    grid-row-end: 1;
-}
-.end-1 {
-    grid-row-end: 2;
-}
-.end-2 {
-    grid-row-end: 3;
-}
-.end-3 {
-    grid-row-end: 4;
-}
-.end-4 {
-    grid-row-end: 5;
-}
-.end-5 {
-    grid-row-end: 6;
-}
-.end-6 {
-    grid-row-end: 7;
-}
-.end-7 {
-    grid-row-end: 8;
-}
-.end-8 {
-    grid-row-end: 9;
-}
-.end-9 {
-    grid-row-end: 10;
-}
-.end-10 {
-    grid-row-end: 11;
-}
-.end-11 {
-    grid-row-end: 12;
-}
-.end-12 {
-    grid-row-end: 13;
-}
-.end-13 {
-    grid-row-end: 14;
-}
-.end-14 {
-    grid-row-end: 15;
-}
-.end-15 {
-    grid-row-end: 16;
-}
-.end-16 {
-    grid-row-end: 17;
-}
-.end-17 {
-    grid-row-end: 18;
-}
-.end-18 {
-    grid-row-end: 19;
-}
-.end-19 {
-    grid-row-end: 20;
-}
-.end-20 {
-    grid-row-end: 21;
-}
-.end-21 {
-    grid-row-end: 22;
-}
-.end-22 {
-    grid-row-end: 23;
-}
-.end-23 {
-    grid-row-end: 24;
-}
-
-.title {
-    font-weight: 600;
-    margin-bottom: 0.25rem;
-}
-.event {
-    border: 1px solid var(--eventBorderColor);
-    border-radius: 5px;
-    padding: 0.5rem;
-    margin: 0 0.5rem;
-    background: white;
-}
-.space, .date {
-    height: 60px;
-}
-body {
-    font-family: system-ui, sans-serif;
-}
-.corp-fi {
-    background: var(--eventColor1);
-}
-.ent-law {
-    background: var(--eventColor2);
-}
-.writing {
-    background: var(--eventColor3);
-}
-.securities {
-    background: var(--eventColor4);
-}
-.date {
-    display: flex;
-    gap: 1em;
-}
-.date-num {
-    font-size: 3rem;
-    font-weight: 600;
-    display: inline;
-}
-.date-day {
-    display: inline;
-    font-size: 3rem;
-    font-weight: 100;
+*{
+    margin: 0;
+    padding:0;
 }
