--- a/templates/change_profile.html
+++ b/templates/change_profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<<div class="card mx-auto p-5 my-5" style="min-width:500px; max-width:75%">
+<div class="card mx-auto p-5 my-5" style="min-width:500px; max-width:75%">
 <h1>Изменение профиля</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
