Заоптимизировал код, убрал лишние импорты, вынес формы в отдельный файл и в целом навел красоты

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark p-3" style="background-color: #f8c374;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Название сайта</a>
+          <a class="navbar-brand" href="/">Главная</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,9 +39,6 @@
               </li>
               <li class="nav-item mr-3">
                 <a class="nav-link active text-center" href="/profile/process">Услуги</a>
-              </li>
-              <li class="nav-item mr-3">
-                <a class="nav-link active text-center" href="/profile/change_profile">Редактировать профиль</a>
               </li>
               <li class="nav-item mr-3">
                 <a class="nav-link active text-center border rounded" href="/logout">Выход</a>
