--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,4 +6,7 @@
     логин - {{ login }}
     <br>номер телефона - {{ number }}
     <br>информация - {{ info }}
+    <br>ссылка на запись для клиентов - <a href="/record/{{ id }}">Тык</a>
+    <a class="nav-link active text-left" href="/profile/change_profile">Редактировать профиль</a>
+</div>
 {% endblock %}
