--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <h1>Авторизация</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
+        <small class="d-inline-flex mb-3 px-2 py-1 fw-semibold text-warning-emphasis bg-warning-subtle border border-warning-subtle rounded-2">{{message}}</small>
         <p>
             {{ form.login.label }}<br>
             {{ form.login(class="form-control", type="email") }}<br>
@@ -25,7 +26,7 @@
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-        <div>{{ message }}</div>
+
     </form>
 </div>
 {% endblock %}
