--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,7 @@
 <h1>Регистрация</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
+    <small class="d-inline-flex mb-3 px-2 py-1 fw-semibold text-warning-emphasis bg-warning-subtle border border-warning-subtle rounded-2">{{message}}</small>
     <p>
         {{ form.login.label }}<br>
         {{ form.login(class="form-control", type="email") }}<br>
@@ -59,7 +60,6 @@
             </p>
         {% endfor %}
     </p>
-    {{message}}
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
 </form>
 </div>
