--- a/templates/register_client.html
+++ b/templates/register_client.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>{{title}}</title>
 </head>
 <body>
-<<div class="card mx-auto p-5 my-5" style="min-width:500px; max-width:75%">
+<div class="card mx-auto p-5 my-5" style="min-width:500px; max-width:75%">
 <h1>Запись на услугу</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
+    <small class="d-inline-flex mb-3 px-2 py-1 fw-semibold text-warning-emphasis bg-warning-subtle border border-warning-subtle rounded-2">{{message}}</small>
     <p>
-        {{ form.name.label }}<br>
-        {{ form.name(class="form-control") }}<br>
+        {{ form.name.label }}
+        {{ form.name(class="form-control") }}
         {% for error in form.name.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -23,8 +22,8 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.phone_number.label }}<br>
-        {{ form.phone_number(class="form-control") }}<br>
+        {{ form.phone_number.label }}
+        {{ form.phone_number(class="form-control") }}
         {% for error in form.phone_number.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -32,8 +31,8 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.date.label }}<br>
-        {{ form.date(class="form-control", type="date") }}<br>
+        {{ form.date.label }}
+        {{ form.date(class="form-control", type="date") }}
         {% for error in form.date.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -41,8 +40,8 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.process_name.label }}<br>
-        {{ form.process_name(class="form-control") }}<br>
+        {{ form.process_name.label }}
+        {{ form.process_name(class="form-control") }}
         {% for error in form.process_name.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -50,8 +49,8 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.master_name.label }}<br>
-        {{ form.master_name(class="form-control") }}<br>
+        {{ form.master_name.label }}
+        {{ form.master_name(class="form-control") }}
         {% for error in form.master_name.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -59,17 +58,17 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.start_time.label }}<br>
-        {{ form.start_time(class="form-control", type="time") }}<br>
+        {{ form.start_time.label }}
+        {{ form.start_time(class="form-control", type="time") }}
         {% for error in form.start_time.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
         {% endfor %}
-    </p>
-    {{message}}
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+
+    {{ form.submit(type="submit", class="btn btn-primary") }}
 </form>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
