--- a/templates/add_process.html
+++ b/templates/add_process.html
@@ -5,7 +5,9 @@
 <h1>Добавление услуги</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
-    <small class="d-inline-flex mb-3 px-2 py-1 fw-semibold text-warning-emphasis bg-warning-subtle border border-warning-subtle rounded-2">{{message}}</small>
+    {%if message%}
+        <small class="d-inline-flex mb-3 px-2 py-1 fw-semibold text-warning-emphasis bg-warning-subtle border border-warning-subtle rounded-2">{{message}}</small>
+    {%endif%}
     <p>
         {{ form.name.label }}<br>
         {{ form.name(class="form-control") }}<br>
