--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
     {{ form.hidden_tag() }}
     {%if message%}
         <small class="d-inline-flex mb-3 px-2 py-1 fw-semibold text-warning-emphasis bg-warning-subtle border border-warning-subtle rounded-2">{{message}}</small>
-    {%endif}
+    {%endif%}
     <p>
         {{ form.login.label }}<br>
         {{ form.login(class="form-control", type="email") }}<br>
